2004-02-26  Peter Seibel  <peter@javamonkey.com>

	* slime.el (slime-list-connections): Make the buffer created by
	this function do a bit more: Can use it to switch to different
	connections and change the default.

2004-02-26  Marco Baringer  <mb@bese.it>

	* swank-openmcl.lisp (ccl::force-break-in-listener): Pass a
	condition object to invoke-debugger.
	Patch by Bryan O'Connor <bryan-slime@lunch.org>

2004-02-26  Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* swank-backend.lisp (:swank): export connection-info.

	* swank-allegro.lisp (lisp-implementation-type-name): Implement
	it.

	* swank-sbcl.lisp (compile-file-for-emacs): Load the fasl file
	regardless of f-p.

	* swank.lisp (swank-pprint): Bind *package* to *buffer-package*.
	Reported by Alan Picard.

	* swank-lispworks.lisp (dspec-buffer-position): Renamed from
	dspec-buffer-buffer-position.  Handle dspecs of the form (defmacro
	foo).  Reported by Alan Picard.
	(arglist-string): Handle unknown arglists properly.

2004-02-25  Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* swank-cmucl.lisp (arglist-string): Delay the call to
	di::function-debug-function until it is actually needed.
	(compile-file-for-emacs): Load the fasl file irrespective of
	COMILE-FILE's third return value.

	* swank.lisp (connection-info): New function.
	(open-streams): Don't send the :check-protocol-version message.  Now
	handled with CONNECTION-INFO.

	* slime.el (slime-symbol-at-point): Don't skip backwards across
	whitespace when we are at the first character of a symbol.  To
	handle this case: skip symbol constituents forward before skipping
	whitespace backwards.  Reported by Jan Richter.
	(slime-connection-close-hook, slime-next-connection)
	(slime-make-default-connection): Remove extra call to format.
	(slime-init-connection-state): Use only a single RPC instead of 4.

2004-02-25  Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* slime.el (slime-with-chosen-connection): Bind