@@ -1,5 +1,11 @@
 2004-02-26  Peter Seibel  <peter@javamonkey.com>
 
+	* slime.el (slime-draw-connection-list): Use text-properties to
+	associate the connections each line of the connections list
+	buffer.
+
+2004-02-26  Peter Seibel  <peter@javamonkey.com>
+
 	* slime.el (slime-list-connections): Make the buffer created by
 	this function do a bit more: Can use it to switch to different
 	connections and change the default.
